--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-# Ignore everything
-*
-
-# Un-ignore directories
-!*/
-
-# Un-ignore files with an extension
-!*.c
-!*.md
+**/build/*
+!**/build/.gitkeep
